--- a/linux/程序管理.md
+++ b/linux/程序管理.md
@@ -3,3 +3,53 @@
 - 多重登录环境的七个基本终端窗口  
   Linux中默认提供了六个文字界面登录窗口，以及一个图形界面，你可以使用[Alt]+[F1]...[F7]来切换不同的终端机界面，而且每个终端机界面的登陆者还可以不同人。
 ## 工作管理（job control）
+
+## 查询已使用文件或已执行进程使用的文件
+- fuser:借由文件（或文件系统）找出正在使用该文件的进程  
+有时间想知道进程到底在启动过程中使用了多少文件，那么可以利用fuser来查看，例如在卸载的时候系统通知【device is busy】，则表示此文件系统正在忙碌中，表示有进程正在使用该文件系统。
+```
+fuser [-umv] [-k [i] [-signal]] file/dir
+-u : 除了列出进程的PID之外，同时列出进程的拥有者。
+-m : 后面接的那个文件名会主动地上提到该文件系统的最顶层，对umount不成功很有效。
+-v : 可以列出每个文件与进程还有命令的相关性
+-k : 找出使用该文件/目录的PID、并试图以SIGKILL这个信号给与该PID
+-i : 必须与-k配合在删除PID之前询问使用者意愿
+-signal: 例如 -1 -15 等，若不加的话默认是 SIGKILL(-9)
+范例：找出目前所在目录的使用PID / 所属账号/权限是什么
+fuser -uv .
+范例2：找出所有使用到/proc这个文件系统的进程
+fuser -uv /proc
+fuser -mvu /proc
+范例3：找到所有使用到/home这个文件系统的进程
+echo $$ # 自己的bash PID
+cd /home
+fuser -muv .
+果然自己的bash PID在
+umount /home
+umount: /home: target is busy.
+(In some cases useful info about processes that use the device is found by lsof(8) or fuser(1))
+# 从fuser的结果可以知道一共五个进程在该目录下运行
+# 当然是无法unmount的，那么要怎么办，可以用如下方法一个一个删除。
+fuser -mki /home
+kill process 31533 ? (y/N) # 不要乱删
+```
+既然可以对整个文件系统，那么对单一文件呢
+```
+范例4： 找到/run下面属于FIFO类型的文件，并且找出读取该文件的进程。
+find /run -type p
+fuser -uv /run/systed/sessions/c1.ref
+# 通常系统的FIFO文件都会放在/run下卖弄，铜鼓欧这个方式来追踪该文件被读取的进程
+```
+- lsof：列出被进程所使用的文件名称  
+fuser是由文件或设备去找进程，反过来由进程去找文件就用lsof
+
+```
+lsof [-aUu] [+d]
+-a : 多项数据需要【同时成立】才显示结果时
+-U : 仅列出UNIX-like系统的socket文件类型
+-u : 后面接username,列出使用者相关进程所使用的文件
++d : 后面接目录，亦即找出某个目录下面已经被使用的文件。
+范例1：列出目前李彤上所有已经被开启的文件与设备
+
+```
+<++>
