--- a/linux/程序管理.md
+++ b/linux/程序管理.md
@@ -52,4 +52,27 @@ lsof [-aUu] [+d]
 范例1：列出目前李彤上所有已经被开启的文件与设备
 
 ```
+
+特殊文件与进程
+---
+SUID SGID SBIT 三种特殊权限  
+进程可能会使用到系统资源，磁盘就是一个系统资源。
+
+### 具有SUID/SGID权限的命令执行状态
+SUID的权限其实与进程的相关性非常大。
+- SUID权限仅对二进制（binary program）有效。
+- 执行者对于该程序需要有x的可执行权限。
+- 本权限仅在执行该程序的过程中有效（run-time）
+- 执行者将具有该程序拥有者（owner）的权限
+
+所以整个SUID的权限会生效是由于（具有该权限的程序被触发），而我们知道一个程序被触发会变成进程。所以执行者可以具有程序拥有者的权限就是在该程序变成进程的那时候。所以，为啥执行了passwd后你就具有了root的权限呢？不都是一般用户执行的吗？这是因为你触发passwd之后，会获得一个新的进程与PID，该PID产生时通过SUID来给与该PID特殊的权限设置。
+```
+passwd
+按下ctrl-z
+pstree -uA # 观察
+# 查询整个系统的SUID/SGID
+find /-perm /6000
+```
 <++>
+
+
