--- a/linux/程序管理.md
+++ b/linux/程序管理.md
@@ -73,6 +73,27 @@ pstree -uA # 观察
 # 查询整个系统的SUID/SGID
 find /-perm /6000
 ```
-<++>
 
+我们一直提到文件的重要权限rwx 但是 我们的/tmp /usr/bin/passwd 不止 rwx 还有其他特殊权限（s跟t）
 
+- Set UID   
+  - 当s这个权限出现在文件拥有者的x权限位时，例如/usr/bin/passwd 这个文件的权限状态“-rwsr-xr-x”，此时就被称为Set UID，简称SUID的特殊权限。
+- SUID权限仅对二进制程序有效
+- 执行者对于改程序具有x的可执行权限
+- 本权限尽在执行该程序的过程中有效
+- 执行者具有改程序拥有者（owner）的权限。
+  
+举个栗子：  
+我们系统所有账号密码都记录在/etc/shadow这个文件里面，这个文件仅有root可以强制写入。既然只要root可以修改，那dmtsai这个一般账号能够修改自己的密码呢？答案是可以。这就是SUID的功能  
+- dmtsai对于/usr/bin/passwd这个程序来说具有x权限
+- passwd的拥有者是root这个账号
+- dmtsai执行passwd的过程中会暂时获得root的权限
+- /etc/shadow可以被dmtsai所执行的passwd修改。
+  
+但如果dmtsai使用cat去读取/etc/shadow会提示权限不足。
+![SUID程序执行过程](../images/Linux/Linux_2021-02-24_10-07-22.png)
+
+- Set GID
+  - 当s出现在群组的x时则成为Set GID，SGID。
+  - 执行者在执行的过程中将会或者该程序群组的支持。
+  
