--- a/mem/复试.md
+++ b/mem/复试.md
@@ -148,3 +148,95 @@ MEM是工程管理硕士的缩写, 他将工程技术、经济学和管理科学
 
 软件管理风险可控，预见风险点。
 
+---
+## 公司和工作简介
+软通动力是一家中国领先的软件与信息技术服务商，提供端对端的数字化解决方案与服务，包括数字化转型咨询，数字化方案设计与实施，云与IT基础设施建设与运维，软件开发与测试服务，数字化运营服务。
+
+我是一名程序员每天的工作就是敲代码，目前是我们开发团队的leader，负责云上数据库项目的开发维护，从需求梳理，任务拆分，在到功能设计开发，以及技术方案的撰写，和coder review。从技术层面识别项目的风险点，保障项目进度。我们做的是mysql数据库系统的管控，主要是保障数据库的高可用，安全性。比如故障迁移，备库重搭，等等。。。
+
+---
+
+- 国家创新驱动发展战略
+> 2012年底召开的“十八大”明确提出：“科技创新是提高社会生产力和综合国力的战略支撑，必须摆在国家发展全局的核心位置。”强调要坚持走中国特色自主创新道路、实施创新驱动发展战略。这是我们党放眼世界、立足全局、面向未来作出的重大决策。
+> "创新驱动发展"战略有两层含义：
+> 一是中国未来的发展要靠科技创新驱动，而不是传统的劳动力以及能源驱动
+> 二是创新的目的是驱动发展，而不是发表高水平论文
+- 中国智造2025
+> 数字化转型
+- 工业4.0
+> 工业1.0 蒸汽机诞生，机器生产代替手工劳动(机械化)
+> 工作2.0 电力驱动产品大规模生产(电气化)
+> 工业3.0 计算机出现，自动化程度大幅度上升(自动化)
+> 工业4.0 智慧化 物联网IOT AI 大数据 智慧工厂 快速上市 客制化
+- 十三五规划(2016-2020	)
+> 是全面建成小康社会决胜阶段
+- 区块链
+- 中印冲突
+- 贸易摩擦
+- 
+
+
+如果说MBA（工商管理硕士）培养的是商业领袖，解决的是企业中经营管理问题。ME（工程硕士），培养的是技术领袖，解决的是工程中的技术问题。那么，MEM（工程管理硕士），培养的则是产业化领袖，解决的是工程中管理问题。
+
+
+
+
+---
+## 概述
+- Mysql风险大盘
+	- 8大类，17小类异常
+	- Stat异常巡检数据采集（参数不一致巡检）
+	- 异常数据统计归档任务
+	- 异常数据示例查询及历史趋势
+	- TODO：参数异常修复，内核版本问题修复，待接入酒保
+- 组件日常维护及发布
+	- 新组件拆分：rdsapi-ext-maxscale, rdsapi-ext-mssql, rdsapi-ext-pgsql
+	- Maxscale路由支持：支持同引擎多版本路由，支持rpcGroup拆分路由（区分基础服务与业务服务）
+	- 支持专享集群拆分：无kindcode或不关心kindcode路由，支持按照功能路由方式
+	- 管控组件docker化改造及一键迁移；
+		1. rdsapi-ext-mysql全部改造替换完毕，支持一键迁移；
+		2. rdsapi全部改造完毕，支持一键迁移
+		3. sls/sunfire监控重新安装/配置，保证现有API监控，并建立海外单元的SLS日志采集，目前全单元均建立sls日志库，为后续监控提供支持
+		4. 以上过程未造成任何故障
+	- 本地盘失败任务治理
+		1. 最终本地盘失败任务，每周少于200个，失败，失败率0.5%~1%
+		2. S2本地盘导致故障少于3个；失败，mysql5.5主备宕，mariadb挂，备库异常变配后HA反复切换
+		3. 非预期参数巡检；有，支持指定参数巡检和元数据与实力参数一致性巡检。
+		4. 反思
+			- 任务流开发速度较快，任务流矿建是以任务为单位的，但是任务步骤在快速迭代，未保持清晰的边界，任务中夹杂各种代码。
+			- 每个任务流，应该给出可能失败的风险点，重点关注这些风险点，应该可以治理大部分失败任务。
+- Alisql发布及小版本自动升级优化
+	- 支持Alisql内核发布迭代，登记完善release note；
+		1. 内核共发布5次
+		2. 每次发布需求，打包信息，参数变动均有详细aone和文档
+		3. 根据用户体验和值班反馈，降低内核发布节奏，2月/次
+	- 清理不同版本内核参数依赖，在api和任务流中隔离各自改动；
+		1. XDB参数与Mysql5.7分离；
+		2. API，任务流中支持mycnf_template_extra表作为参数模板终态，支持现有产品按照引擎/版本向终态灰度。
+	- 优化当前小版本自动升级流程，进一步提升自动化程度；
+		1. 目前还是使用之前的小版本灰度机制；
+		2. 新内核灰度节奏：第一周新加坡：10，第二周公有云海外：50，第三周：200
+	- 反思
+		1. 内核发布自动化程度不足；
+		2. 内核自动灰度策略，应该和历史的升级成功率挂钩，自动调节灰度进度。
+		3. 长尾小版本快速升级；
+- 专享集群二期瑶池开发支持
+	- 支持专享集群瑶池/控制台部分开发，调试，发布
+	- 负责确保控制台前端功能联调，如期发布。
+	- 修复一期若干bug和设计问题，例如storageType，payType，实例详情页/详情页到期时间，商品配置，主机到期时间展示等问题；
+	- 与PD对齐南天门商品配置，保证配置正常；
+	- 支持云盘版 主实例/只读实例 国内站，国际站上线；
+	- 支持本地盘走订单商品改造；
+	- 反思
+		1. 瑶池部分开发流程比较了解了，后续更快开展业务；
+		2. 商品部分，凌霄问题排查等问题熟悉起来了；
+		3. PD提交产品要有验收标准，保证商品相关工作的节奏和质量
+- Docker_on_esc转物理机
+	- 茅台API/任务流部分已开发完成；
+	- 茅台部分自测完成；
+	- 瑶池部分开发中；
+	- 原有基础上扩展，支持5.7/8.0的基础版本升级本地盘高可用；
+	- 进度：被专享集群delay，未达预期上线时间，本周上线
+	- 反思
+		- 业务目标时间节点卡的不是很准，11月没有上线之后，导致任务delay。后续需要更精细的排期，具体到子任务流。
+![docker to physical](../images/docker_to_physical.jpg)
