--- a/mem/复试.md
+++ b/mem/复试.md
@@ -239,4 +239,4 @@ MEM是工程管理硕士的缩写, 他将工程技术、经济学和管理科学
 	- 进度：被专享集群delay，未达预期上线时间，本周上线
 	- 反思
 		- 业务目标时间节点卡的不是很准，11月没有上线之后，导致任务delay。后续需要更精细的排期，具体到子任务流。
-![docker to physical](../../images/docker_to_physical.jpg)
+![docker to physical](../images/rds/docker_to_physical.jpg)
