--- a/mem/复试.md
+++ b/mem/复试.md
@@ -240,3 +240,8 @@ MEM是工程管理硕士的缩写, 他将工程技术、经济学和管理科学
 	- 反思
 		- 业务目标时间节点卡的不是很准，11月没有上线之后，导致任务delay。后续需要更精细的排期，具体到子任务流。
 ![docker to physical](../images/rds/docker_to_physical.jpg)
+
+---
+
+跳槽比较频繁？
+首先刚毕业那几年的确比较的忙，有点盲目，现在基本确定下来，要在互联网大数据，云计算行业长期的做下去
