--- a/mem/自我介绍.md
+++ b/mem/自我介绍.md
@@ -1,8 +1,12 @@
 ## 中文自我介绍
 
-各位老师好，很高兴你们能给我这样一个参加面试的机会。我是傅良军，今年33岁。毕业于浙江大学远程教育学院，市场营销专业，大专学历。我是浙江省金华市浦江县人，现定居在杭州。
+各位老师好，很高兴你们能给我这样一个参加面试的机会。我是傅良军，今年33岁。浙江省金华市浦江县人，先定居于浙江杭州。我毕业于浙江大学远程教育学院，市场营销专业，大专学历。
 
 我曾经是苏州科技大学，电子信息与科学技术的一名本科学生。后来辍学到社会上打工，最终选择了IT行业，并自学了计算机技术，以及多种编程语言。(辍学原因是因为自己太心急，想早早的出去赚钱，事实证明这是我走的一段弯路，后来沉下心自学了编程才慢慢走上正轨。)
+我是一名软件工程师，有9年左右的软件研发，编程经验，熟悉计算机信息技术，掌握多种编程语言。目前就职于软通动力集团有限公司。负责云上数据库管控系统的开发工作。我目前是我们研发4人组的组长，未来想做一些偏管理的工作。主要是考虑以下两方面的原因，首先经过多年成长和技术沉淀，在技术上有一定的优势。其次，随着年龄的增长，不管技术做的有多棒，终究会面临管理问题，当技术已经达到很高层次之后，多少得带新人，带其他技术人员。我认为一个好的管理者能够发动身边的人朝一个方向努力。我的下一个职业目标是项目经理。我报考MEM是想系统的学习管理知识将来能更好的胜任项目经理的职位，以及有一个好的学历提升自己的职场竞争力。
+
+闲暇之余，我喜欢运动和看书，或者网上逛逛论坛，知乎，博客园，CSDN，github，youtube等社区，
+以上是我的一些基本情况，希望自己今天有一个好的表现，谢谢。
 
 我从事软件开发工作已有9年左右的软件研发编程经验，熟悉计算机技术，多种编程语言。参与多个重大项目的开发，熟悉项目开发流程，以及项目管理技术。目前的职位我们开发小团队的leader，负责公司云上数据库的管控系统开发。
 
@@ -16,6 +20,11 @@
 mysql sqlserver ppas 我们主要负责的是mysql数据库的稳定性和安全性，负责容灾备份数据加密。
 
 不能说是很后悔，但是确实很遗憾，受限于当时的思维方式，以及做事情考虑事情不成熟，当时认为是正确的。放在现在来看那可定是不对的，
+
+---
+跳槽频繁
+
+首先前几年确实比较迷茫，因为技术实在太多了
 
 ---
 
