--- a/mem/自我介绍.md
+++ b/mem/自我介绍.md
@@ -83,3 +83,30 @@ mysql sqlserver ppas 我们主要负责的是mysql数据库的稳定性和安全
 - 工作经验和能力
 - 职业规划
 - 发展潜质
+	
+- 推荐一本书？
+
+[recommand a book](http://www.wenshubang.com/yingyuzuowen/182317.html)
+
+- Why do you choose our school for your postgraduate study?
+
+- What is your greatest strength
+
+
+- What is your greatest weakness
+
+
+- Why do you choose cross-major to take the examination?
+- How do you plan for your postgraduate study?
+- What would you like to do after graduate?
+- If there were an opportunity of studying abroad, what would you do?
+- Talk about your hometown.
+- Could you say something about your family?
+- Can you work under pressures?How do you work under pressure?
+- You have enjoyed many holidays and vacations, which one impressed you the most? Why?
+- Talk about the most impressive thing happened in your work experience.
+- Among all classes you’ve attended, which one impressed you the most? Why?
+- http://blog.sina.com.cn/s/blog_6ee784680100na4k.html
+- no matter how hard the life is the family always supports me
+- Family is my strong backing, I love my family
+
