--- a/mem/自我介绍.md
+++ b/mem/自我介绍.md
@@ -10,12 +10,16 @@
 
 
 
-各位老师好，很荣幸能够有机会进入复试。我是傅良军，今年33岁。浙江省金华市浦江县人，现定居于浙江杭州。我毕业于浙江大学远程教育学院，市场营销专业，大专学历。
+各位老师好，很荣幸能够有机会进入到复试阶段。我是傅良军，今年33岁。浙江省金华市浦江县人，现定居于浙江杭州。
 
-我是一名软件工程师，有9年左右的软件研发，编程经验，熟悉计算机信息技术，掌握多种编程语言。参与并主导过多个项目的开发维护工作。目前就职于软通动力集团有限公司。负责云上数据库管控系统的开发工作。我目前是我们研发4人组的组长，负责团队内日常管理工作，包括新人培训，任务分配，进度和质量把控等等。我的下一个职业目标是项目经理，理由是主要是考虑以下两方面的原因，首先经过多年成长和技术沉淀，在技术上有一定的优势。其次，随着年龄的增长，不管技术做的有多棒，终究会面临管理问题，当技术已经达到某一定高度之后，多少得带新人，带其他技术人员。我认为一个好的管理者能够发动身边的人朝一个方向努力，完成集体目标。我报考MEM的动机是想系统的学习管理知识将来能更好的胜任管理岗位，以及有一个好的学历背景提升自己的职场竞争力。
+我是一名软件工程师，从事软件研发工作，目前已有8年多的编程经验，熟悉计算机信息技术，掌握多种编程语言。参与并主导过多个项目的开发维护工作。目前就职于软通动力集团有限公司。负责云上数据库管控系统的开发工作。我目前是我们研发4人组的组长，负责团队内日常管理工作，包括新人培训，任务分配，进度和质量把控等等。我的下一个职业目标是项目经理.主要考虑以下两方面的原因，首先经过多年成长和技术沉淀，在技术上有一定的优势。其次，随着年龄的增长，做技术的人，终究会面临管理问题，当技术已经达到某一定高度之后，多少得带新人，带其他技术人员。我认为一个好的管理者能够发动身边的人朝一个方向努力，完成集体目标。我报考MEM的动机是想系统的学习工程管理知识将来能更好的胜任管理岗位，以及有一个好的学历背景提升自己的职场竞争力。
 
 闲暇之余，我喜欢运动和看书，或者逛逛CSDN，github，stack overflow，知乎，博客园等社区网站
 以上是我的一些基本情况，希望自己今天有一个好的表现，谢谢。
+
+
+
+我毕业于浙江大学远程教育学院，市场营销专业，大专学历。
 
 我曾经是苏州科技大学，电子信息与科学技术的一名本科学生。后来辍学到社会上打工，最终选择了IT行业，并自学了计算机技术，以及多种编程语言。(辍学原因是因为自己太心急，想早早的出去赚钱，事实证明这是我走的一段弯路，后来沉下心自学了编程才慢慢走上正轨。)
 
