--- a/mem/政治.md
+++ b/mem/政治.md
@@ -16,4 +16,4 @@
 
 9.学习习近平总书记关于国家总体安全观的重要思想，结合新冠病毒肺炎疫情的发展形势，谈谈你对“发展与安全”关系的理解。
 
-10.结合自己家乡或求学地的实际变化感受，谈谈对“绿水青山就是金山银山”重要论断的理解。
+10.结合自己家乡或求学地的实际变化感受，谈谈对“绿水青山就是金山银山”重要论断的理解。!@#
